--- a/pagemap.html
+++ b/pagemap.html
@@ -8,7 +8,7 @@ title: Page Map
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
  </head>
   <body>
-    <div class="wrapper">
+    <div >
       <section>
         {% for page in site.pages %}
         <ul>
