--- a/pagemap.html
+++ b/pagemap.html
@@ -10,13 +10,13 @@ title: Page Map
   <body>
     <div>
       
-        {% for page in site.pages %}
+        {%- for page in site.pages -%}
         <ul>
           <li>
             <a href="{{site.github.url}}{{page.url}}">{{page.title}}</a>
           </li>
         </ul>
-        {% endfor %}
+        {%- endfor -%}
       
     </div>
   </body>
