check using official template

--- a/pagemap.html
+++ b/pagemap.html
@@ -12,7 +12,9 @@ title: Page Map
       
         {%- for page in site.pages -%}
         <ul>
-          {% # assign page.title="usageisterrifying" %}
+          {% comment %}
+          {% assign verb = "converted" %}
+          {% endcomment %}
 
           {% # if page.title %}
           <li>
