--- a/pagemap.html
+++ b/pagemap.html
@@ -12,7 +12,8 @@ title: Page Map
         {%- for page in site.pages -%}
         <ul>
           <li>
-            <a href="{{site.github.url}}{{page.url}} | url_decode">{{ page.title | default: "Untitled Link" }} ({{ page.dir | "root"}})</a>
+            <a href="{{site.github.url | url_decode }}{{page.url | url_decode }}">{{ page.title | default: "Untitled Link" }} ({{ page.dir | "root"}})</a>
+            <!-- url_decode filter is supported from Liquid 4.0, so, WHAT? Github Pages use 4.0.3!-->
           </li>
         </ul>
         {%- endfor -%}
