--- a/View Categories.html
+++ b/View Categories.html
@@ -11,9 +11,9 @@ title: View Categories
 <h1>View Categories</h1>
 <ul>
     <!-- //这里使用了 jekyll 语法，会被编译，所以加多个"\" -->
-    {% for category in site.categories %\}
+    {% for category in site.categories %}
     <li><a href="/categories/{{ category | first }}/" title="view all
 posts">{{ category | first }} {{ category | last | size }}</a>
     </li>
-    {\% endfor %\}
+    {% endfor %}
 </ul>
