--- a/View Categories.html
+++ b/View Categories.html
@@ -8,12 +8,14 @@ title: View Categories
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
  </head>
 
-<h1>View Categories</h1>
+<body>
+ <h1>View Categories</h1>
 <ul>
     <!-- //这里使用了 jekyll 语法，会被编译，所以加多个"\" -->
     {% for category in site.categories %}
-    <li><a href="/categories/{{ category | first }}/" title="view all
-posts">{{ category | first }} {{ category | last | size }}</a>
+    <li>
+        <a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }} {{ category | last | size }}</a>
     </li>
     {% endfor %}
-</ul>
+</ul>   
+</body>
