--- a/View Categories.html
+++ b/View Categories.html
@@ -14,7 +14,8 @@ title: View Categories
     <!-- //这里使用了 jekyll 语法，会被编译，所以加多个"\" -->
     {% for category in site.categories %}
     <li>
-        <a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }} {{ category | last | size }}</a>
+        <!-- <a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }} {{ category | last | size }}</a> -->
+        <p>{{ category }}</p>
     </li>
     {% endfor %}
 </ul>   
