--- a/View Categories.html
+++ b/View Categories.html
@@ -10,6 +10,9 @@ title: View Categories and Tags
 
 <body>
     <h1>View Categories</h1>
+    {% if site.categories==nil %}
+    <p>No Categories</p>
+    {% endif %}
     <ul>
         <!-- //这里使用了 jekyll 语法，会被编译，所以加多个"\" -->
         {% for category in site.categories %}
@@ -20,6 +23,9 @@ title: View Categories and Tags
         {% endfor %}
     </ul>   
     <h1>View Tags</h1>
+    {% if site.tags==nil %}
+    <p>No tags</p>
+    {% endif %}
     
     {% for tag in site.tags %}
     <h3>{{ tag[0] }}</h3>
