--- a/View Categories.html
+++ b/View Categories.html
@@ -21,7 +21,7 @@ title: View Categories and Tags
         {% for category in site.categories %}
         <li>
             <!-- <a href="/categories/{{ category | first }}/" title="view all posts">{{ category | first }} {{ category | last | size }}</a> -->
-            <p>{{ category[0] }}</p>
+            <p>{{ category }}</p>
         </li>
         {% endfor %}
     </ul>   
@@ -41,7 +41,7 @@ title: View Categories and Tags
     <p>{{site.tags.size}}</p>
 
     {% for tag in site.tags %}
-    <h3>{{ tag[0] }}: {{ tag | last | size }}</h3>
+    <h3>{{ tag }}: {{ tag | last | size }}</h3>
     <ul>
         {% for post in tag.last %}
         <li><a href="{{ post.url }}">{{ post.title }}</a></li>
