--- a/View Categories.html
+++ b/View Categories.html
@@ -12,6 +12,7 @@ tags: __supports__
 <body>
     <h1>This file:</h1>
     {% for tag in post.tags %}
+        <p>{{ tag }}</p>
         {% assign tag_slug = tag | slugify: "raw" %}
         <a class="tag-link"
             href={{ site.baseurl | append: "/tags/" | append: tag_slug | append: "/" }}
@@ -19,7 +20,7 @@ tags: __supports__
             #{{ tag }}
         </a>
     {% endfor %}
-    ---
+    <p>---</p>
     <h1>View Categories</h1>
     {% if site.categories == nil %}
         <p>No Categories</p>
@@ -54,7 +55,7 @@ tags: __supports__
         {% endfor %}
     </ul>
     
-    ---
+    <p>---</p>
     <h1>More</h1>
     
     <p>{{site.tags.size}}</p>
@@ -67,7 +68,7 @@ tags: __supports__
         {% endfor %}
     </ul>
     {% endfor %}
-    ---
+    <p>---</p>
     <h1>Test</h1>
 
     <div class="all-tags">
