--- a/pagemap.html
+++ b/pagemap.html
@@ -16,7 +16,7 @@ title: Page Map
           <li>
             <!-- <a href="{{site.github.url | url_decode}}{{page.url | url_decode}}">{{ page.title | default: "Untitled Link" }} ({{ page.dir | default:"root" | url_decode }})</a> -->
             <!-- <a href="{{site.github.url | url_decode}}{{page.url}}">{{ page.title | default: "Untitled Link" }} ({{ page.dir | default:"root" }})</a> -->
-            <a href="{{site.github.url | url_decode}}{{page | url_escape}}">{{ page.title | default: "Untitled Link" }} ({{ page.dir | default:"root" | url_decode }})</a>
+            <a href="{{site.github.url | url_decode}}{{page.url | url_escape}}">{{ page.title | default: "Untitled Link" }} ({{ page.dir | default:"root" | url_decode }})</a>
             <!-- url_decode filter is supported from Liquid 4.0, so, WHAT? Github Pages use 4.0.3!-->
           </li>
           {%- endif -%}
