--- a/View Categories.html
+++ b/View Categories.html
@@ -11,7 +11,7 @@ tags: __supports__
 
 <body>
     <h1>This file:</h1>
-    {% for tag in post.tags %}
+    {% for tag in page.tags %}
         <p>{{ tag }}</p>
         {% assign tag_slug = tag | slugify: "raw" %}
         <a class="tag-link"
@@ -20,7 +20,7 @@ tags: __supports__
             #{{ tag }}
         </a>
     {% endfor %}
-    <p>---</p>
+    <hr>
     <h1>View Categories</h1>
     {% if site.categories == nil %}
         <p>No Categories</p>
@@ -47,7 +47,7 @@ tags: __supports__
     {% endif %}
 
     <ul>
-        {% assign tags = site.posts | all_tags %}
+        {% assign tags = site.pages | all_tags %}
         {% for tag in tags %}
             <li>
                 <p>{{ tag['name'] }}: [{{ tag['count'] }}]</p>
@@ -55,7 +55,7 @@ tags: __supports__
         {% endfor %}
     </ul>
     
-    <p>---</p>
+    <hr>
     <h1>More</h1>
     
     <p>{{site.tags.size}}</p>
@@ -64,17 +64,17 @@ tags: __supports__
     <h3>{{ tag }}: {{ tag | last | size }}</h3>
     <ul>
         {% for post in tag.last %}
-        <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
         {% endfor %}
     </ul>
     {% endfor %}
-    <p>---</p>
+    <hr>
     <h1>Test</h1>
 
     <div class="all-tags">
         All tags:
         <ul>
-          {% assign tags = site.posts | all_tags %}
+          {% assign tags = site.pages | all_tags %}
           {% for tag in tags %}
             {% assign tag_slug = tag['name'] | slugify: "raw" %}
             <li>
