--- a/View Categories.html
+++ b/View Categories.html
@@ -48,7 +48,7 @@ tags: __supports__
     {% endif %}
 
     <ul>
-        {% assign tags = site.pages | map: 'tags' | uniq | compact %}
+        {%- assign tags = site.pages | map: 'tags' | uniq | compact -%}
         {%- for tag in tags -%}
             <li>
                 <p>{{ tag }}</p>
@@ -76,7 +76,7 @@ tags: __supports__
         All tags:
         <ul>
           {% assign tags = site.pages | all_tags %}
-          {% assign tags2 = site.pages | map:'tags' %}
+          {% assign tags2 = site.pages | map: "tags" %}
           {% assign tags3 = site.pages %}
           {%- if tags == tags2 -%}
             <p>tags == tags2</p>
